# sotn-decomp

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
